# memo

./: Cargo.toml  LICENSE  README.md  completion.sh  install.sh
src/: cli.rs  commands.rs  main.rs  memo.rs
