[package]
name = "memo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = "4.5"
home = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
arboard = "3.3.2"
chrono = "0.4.38"
prettytable = "0.10.0"
